Info window shows non-working code for setting scene units in 2.8 #58771

Closed
opened 2018-12-05 08:18:23 +01:00 by Per · 6 comments

System Information
Operating system: MacOS High Sierra 10.13.6
Graphics card:

Blender Version
December 04, 00:11:08, 1b6a394d86, blender2.8

Short description of error
When setting the scene unit from the properties panel, the info window shows an equivalent line of python code that raises an error.

Exact steps for others to reproduce the error

  1. Make sure you have a properties area, a python console and an info area open
  2. In the properties area, go to the scene tab and set the unit system of the scene to Metric
  3. Notice that the corresponding python line bpy.context.scene.system = 'METRIC' shows up in the info area
  4. Run the line from the previous step in the python console
  5. Notice that an AttribteError is raised (AttributeError: 'Scene' object has no attribute 'system')
  6. Also notice that the unit system can be set properly using bpy.context.scene.unit_settings.system = 'METRIC'

Screen Shot 2018-12-05 at 08.16.08.png

**System Information** Operating system: MacOS High Sierra 10.13.6 Graphics card: **Blender Version** December 04, 00:11:08, 1b6a394d862, blender2.8 **Short description of error** When setting the scene unit from the properties panel, the info window shows an equivalent line of python code that raises an error. **Exact steps for others to reproduce the error** 1. Make sure you have a properties area, a python console and an info area open 2. In the properties area, go to the scene tab and set the unit system of the scene to `Metric` 3. Notice that the corresponding python line `bpy.context.scene.system = 'METRIC'` shows up in the info area 4. Run the line from the previous step in the python console 5. Notice that an AttribteError is raised (`AttributeError: 'Scene' object has no attribute 'system'`) 6. Also notice that the unit system can be set properly using `bpy.context.scene.unit_settings.system = 'METRIC'` ![Screen Shot 2018-12-05 at 08.16.08.png](https://archive.blender.org/developer/F5830307/Screen_Shot_2018-12-05_at_08.16.08.png)
Author

Added subscriber: @stuffmatic

Added subscriber: @stuffmatic
Per changed title from Info window shows non-working code for setting scene units to Info window shows non-working code for setting scene units in 2.8 2018-12-05 08:36:51 +01:00
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Jacques Lucke self-assigned this 2018-12-05 11:09:40 +01:00
Member

Can confirm. The command shown in the Info Editor is not generated correctly when any of the unit settings is changed. Will take a look.

Can confirm. The command shown in the Info Editor is not generated correctly when any of the unit settings is changed. Will take a look.
Member
[D4034](https://archive.blender.org/developer/D4034)

This issue was referenced by eeabed2132

This issue was referenced by eeabed2132f98131ac896f15e68b1805e0ce69a7
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58771
No description provided.