Fix T58771: Wrong path to Unit Settings

Reviewers: brecht

Differential Revision: https://developer.blender.org/D4034